--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "face-api.js": "^0.22.2",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "next": "16.0.1",
     "postprocessing": "^6.38.0",
     "react": "19.2.0",
