--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lucide-react": "^0.553.0",
     "mathjs": "^15.1.0",
     "motion": "^12.23.24",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "postprocessing": "^6.38.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
